[gd_scene load_steps=16 format=3 uid="uid://cyd6tpkvik6b3"]

[ext_resource type="PackedScene" path="res://scenes/game/item/item_deposit/item_deposit.tscn" id="1"]
[ext_resource type="Script" path="res://scenes/game/gameobjects/biogrower.gd" id="2"]
[ext_resource type="Script" path="res://global/data/damage.gd" id="2_1f7x4"]
[ext_resource type="PackedScene" uid="uid://bbavnvhdyv0se" path="res://assets/models/processor.glb" id="3_i1u8v"]
[ext_resource type="Material" uid="uid://bbiqg1ds6lwaf" path="res://assets/materials/processor.tres" id="4_0vpya"]
[ext_resource type="PackedScene" uid="uid://c7qyybqvmlu5y" path="res://scenes/game/gameobjects/interactables/hint_object_interface.tscn" id="5_imjnq"]
[ext_resource type="Script" path="res://scenes/game/ui_bar.gd" id="6_xv4hy"]
[ext_resource type="FontFile" uid="uid://qgku7moi1efd" path="res://assets/fonts/scribbles.ttf" id="7_igao5"]

[sub_resource type="Resource" id="Resource_jpqke"]
script = ExtResource("2_1f7x4")
type = 3
amount = 5

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(3, 3, 5)

[sub_resource type="BoxShape3D" id="2"]
size = Vector3(4, 2, 5)

[sub_resource type="LabelSettings" id="LabelSettings_4c0tk"]
font = ExtResource("7_igao5")
font_size = 25

[sub_resource type="Animation" id="6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/HintObjectInterface/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="12"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/HintObjectInterface/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pg7gf"]
_data = {
"RESET": SubResource("6"),
"fade_in": SubResource("12")
}

[node name="BioGrower" type="StaticBody3D" node_paths=PackedStringArray("blood_prog_bar", "water_prog_bar", "fertilizer_prog_bar", "exotic_prog_bar", "growth_prog_bar", "anim_player")]
collision_layer = 3
collision_mask = 0
script = ExtResource("2")
blood_prog_bar = NodePath("CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/StatBar")
water_prog_bar = NodePath("CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/StatBar3")
fertilizer_prog_bar = NodePath("CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/StatBar2")
exotic_prog_bar = NodePath("CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/StatBar4")
growth_prog_bar = NodePath("CanvasLayer/HintObjectInterface/HBoxContainer/VerticalBar")
player_use_damage = SubResource("Resource_jpqke")
anim_player = NodePath("CanvasLayer/HintObjectInterface/AnimationPlayer")

[node name="SpawnPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 3)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("1")

[node name="processor" parent="." instance=ExtResource("3_i1u8v")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="obj-processor" parent="processor" index="0"]
surface_material_override/0 = ExtResource("4_0vpya")

[node name="GrowTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="ResourceConsumeTimer" type="Timer" parent="."]

[node name="ItemDeposit" parent="." instance=ExtResource("1")]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="ItemDeposit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HintObjectInterface" parent="CanvasLayer" instance=ExtResource("5_imjnq")]

[node name="CanvasModulate" parent="CanvasLayer/HintObjectInterface" index="0"]
color = Color(1, 1, 1, 0)

[node name="VBoxContainer" parent="CanvasLayer/HintObjectInterface/HBoxContainer" index="0"]
size_flags_vertical = 1

[node name="TitleLabel" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer" index="0"]
size_flags_vertical = 6
text = "biogrower"

[node name="StatBar" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer" index="1"]
visible = true

[node name="Label" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/StatBar" index="0"]
text = "blood"

[node name="StatBar2" type="ProgressBar" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer" index="2"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 4
value = 50.0
show_percentage = false
script = ExtResource("6_xv4hy")

[node name="Label" type="Label" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/StatBar2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "fertilizer"
label_settings = SubResource("LabelSettings_4c0tk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatBar3" type="ProgressBar" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer" index="3"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 4
value = 50.0
show_percentage = false
script = ExtResource("6_xv4hy")

[node name="Label" type="Label" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/StatBar3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "moisture"
label_settings = SubResource("LabelSettings_4c0tk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatBar4" type="ProgressBar" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer" index="4"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 4
value = 50.0
show_percentage = false
script = ExtResource("6_xv4hy")

[node name="Label" type="Label" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/StatBar4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "exotic"
label_settings = SubResource("LabelSettings_4c0tk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VerticalBar" parent="CanvasLayer/HintObjectInterface/HBoxContainer" index="1"]
visible = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/HintObjectInterface"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_pg7gf")
}

[node name="DepositSound" type="AudioStreamPlayer3D" parent="."]
bus = &"SoundFX"

[node name="GrowthTimeoutSound" type="AudioStreamPlayer3D" parent="."]
bus = &"SoundFX"

[node name="GrowthTimeoutFailSound" type="AudioStreamPlayer3D" parent="."]
bus = &"SoundFX"

[node name="GrowingSound" type="AudioStreamPlayer3D" parent="."]
bus = &"SoundFX"

[connection signal="timeout" from="GrowTimer" to="." method="_on_GrowTimer_timeout"]
[connection signal="timeout" from="ResourceConsumeTimer" to="." method="_on_ResourceConsumeTimer_timeout"]
[connection signal="body_entered" from="ItemDeposit" to="." method="_on_ItemDeposit_body_entered"]

[editable path="processor"]
[editable path="CanvasLayer/HintObjectInterface"]
